use bouncycastle version of Base64